--- a/animes/mashle/mashle 2.html
+++ b/animes/mashle/mashle 2.html
@@ -816,7 +816,7 @@
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire y Google Drive</P>
 						<button class="boton-descargar-7">Proximamente</button>
-						<button class="boton-descargar-7-ligero">Proximamente Opcion 2</button>
+						<button class="boton-descargar-7-ligero">Proximamente Drive</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
