--- a/animes/solo leveling/solo leveling.html
+++ b/animes/solo leveling/solo leveling.html
@@ -793,13 +793,13 @@
 						<P>Enlace: Mediafire</P>
 						<button class="boton-descargar-6">Descargar Japones</button>
 						
-						<button class="boton-descargar-6-lat">Proximamente Español Latino</button>
+						<button class="boton-descargar-6-lat">Descargar Español Latino</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: Contraseña para el archivo Rar: <b>descargaranimes.net</b></p>
+						<p>Nota: Contraseña para el archivo Rar: Latino: <b>www.locuranime.com</b> | Japones: <b>descargaranimes.net</b></p>
 				</div>
 			</div>
 			<div class="container-superior-temporadas">
