--- a/animes/sousou no fierren/sousou no fierren.html
+++ b/animes/sousou no fierren/sousou no fierren.html
@@ -711,6 +711,29 @@
 					</div>
 					<a href="" class="link-1" target="_blank"></a>
 					<div class="info-temporada">
+						<h3>Episodio 21</h3>
+						<p>Duracion: 23m</p>
+						<p>2023</p>
+						<p>Idioma: Español Latino</p>
+						<p>Subtitulos-No</p>
+						<p>Calidad: HD-720p</p>
+						<P>Enlace: Mediafire</P>
+						<button class="boton-descargar-21">Descargar</button>
+					</div>
+				</div>
+				<div class="pie-de-temporada">
+						<p>Arco</p>
+						<p>Relleno: 0%</p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>www.locuranime.com</b></p>
+				</div>
+			</div>
+			<div class="container-superior-temporadas">
+				<div class="container-info-temporadas">
+					<div class="poster-temporada">
+						<img src="../../poster/sousou no fierren img 2.jpg">
+					</div>
+					<a href="" class="link-1" target="_blank"></a>
+					<div class="info-temporada">
 						<h3>Episodios 1 al 23</h3>
 						<p>Duracion: 23m</p>
 						<p>2023</p>
@@ -728,6 +751,30 @@
 						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>dw-anime</b></p>
 				</div>
 			</div>
+			<!-- <div class="container-superior-temporadas">
+				<div class="container-info-temporadas">
+					<div class="poster-temporada">
+						<img src="../../poster/sousou no fierren img 2.jpg">
+					</div>
+					<a href="" class="link-1" target="_blank"></a>
+					<div class="info-temporada">
+						<h3>Episodio 24</h3>
+						<p>Duracion: 23m</p>
+						<p>2023</p>
+						<p>Idioma: Japones</p>
+						<p>Subtitulos-Si: Español Latino</p>
+						<p>Calidad: HD-720p</p>
+						<P>Enlace: Mediafire</P>
+						<button class="boton-descargar-24-jap">Descargar</button>
+						
+					</div>
+				</div>
+				<div class="pie-de-temporada">
+						<p>Arco</p>
+						<p>Relleno: 0%</p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>descargaranimes.net</b></p>
+				</div>
+			</div> -->
 			
 
 			
