--- a/animes/mashle/mashle 2 lat.html
+++ b/animes/mashle/mashle 2 lat.html
@@ -766,14 +766,14 @@
 						<p>Subtitulos-No</p>
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-5">Proximamente</button>
+						<button class="boton-descargar-5">Descargar</button>
 						
 					</div>
 				</div>
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>descargaranimes.net</b></p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>www.locuranime.com</b></p>
 				</div>
 			</div>
 			<div class="container-superior-temporadas">
