--- a/animes/kimetsu no yaiba/kimetsu no yaiba.html
+++ b/animes/kimetsu no yaiba/kimetsu no yaiba.html
@@ -668,8 +668,9 @@
 						<p>Idioma: Español Latino</p>
 						<p>Subtitulos-No</p>
 						<p>Calidad: CAMRIP</p>
-						<P>Enlace: Mega</P>
+						<P>Enlace: Mediafire y Mega</P>
 						<div class="div-d-b">
+							<button class="boton-descargar-4-3">Descargar Mediafire</button>
 							<button class="boton-descargar-4-1">Descargar</button>
 							<button class="boton-descargar-4-2">Descargar Mega</button>
 							
