--- a/animes/mashle/mashle 2.html
+++ b/animes/mashle/mashle 2.html
@@ -814,15 +814,15 @@
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire y Google Drive</P>
-						<button class="boton-descargar-7">Proximamente</button>
-						<button class="boton-descargar-7-ligero">Proximamente Drive</button>
+						<P>Enlace: Google Drive</P>
+						<button class="boton-descargar-7">Descargar</button>
+						<button class="boton-descargar-7-ligero">Descargar Drive</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>descargaranimes.net</b> | Para Drive: <b>dw-anime</b></p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>dw-anime</b></p>
 				</div>
 			</div>
 			<div class="container-superior-temporadas">
