--- a/animes/my hero academia peliculas/my hero academia peliculas.html
+++ b/animes/my hero academia peliculas/my hero academia peliculas.html
@@ -714,7 +714,7 @@
 						<p>2021</p>
 						<p>Idioma: Español Latino</p>
 						<p>Subtitulos-NO</p>
-						<p>Calidad: HD-720p</p>
+						<p>Calidad: HD-720p CAMRIP</p>
 						<P>Enlace: Fireload</P>
 						<button class="boton-descargar-3">Descargar</button>
 					</div>
