--- a/animes/one piece film red/one piece film red.html
+++ b/animes/one piece film red/one piece film red.html
@@ -668,7 +668,7 @@
 						<p>2022</p>
 						<p>Idioma: Español Latino</p>
 						<p>Subtitulos-NO</p>
-						<p>Calidad: HD-720p</p>
+						<p>Calidad: HD-720p CAMRIP</p>
 						<P>Enlace: Mediafire</P>
 						<button class="boton-descargar-1">Descargar</button>
 					</div>
