--- a/animes/one piece/one piece 2.html
+++ b/animes/one piece/one piece 2.html
@@ -2915,6 +2915,29 @@
 						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>descargaranimes.net</b></p>
 				</div>
 			</div>
+			<div class="container-superior-temporadas">
+				<div class="container-info-temporadas">
+					<div class="poster-temporada">
+						<img src="../../poster/one piece 3.jpg">
+					</div>
+					
+					<div class="info-temporada">
+						<h3>Episodio 1095</h3>
+						<p>Duracion: 23m</p>
+						<p>2024</p>
+						<p>Idioma: Japones</p>
+						<p>Subtitulos-Si: Español latino</p>
+						<p>Calidad: HD-720p</p>
+						<P>Enlace: Fireload o Mediafire</P>
+						<button class="boton-descargar-95">Descargar</button>
+					</div>
+				</div>
+				<div class="pie-de-temporada">
+						<p>Arco: Arco del Pais de Wano</p>
+						<p>Relleno:</p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>descargaranimes.net</b></p>
+				</div>
+			</div>
 			
 			
 			
