--- a/animes/sousou no fierren/sousou no fierren.html
+++ b/animes/sousou no fierren/sousou no fierren.html
@@ -663,7 +663,7 @@
 					</div>
 					<a href="" class="link-1" target="_blank"></a>
 					<div class="info-temporada">
-						<h3>Episodios 1 al 19</h3>
+						<h3>Episodios 1 al 21</h3>
 						<p>Duracion: 23m</p>
 						<p>2023</p>
 						<p>Idioma: Español Latino</p>
@@ -734,14 +734,14 @@
 					</div>
 					<a href="" class="link-1" target="_blank"></a>
 					<div class="info-temporada">
-						<h3>Episodios 1 al 23</h3>
+						<h3>Episodios 1 al 24</h3>
 						<p>Duracion: 23m</p>
 						<p>2023</p>
 						<p>Idioma: Japones</p>
 						<p>Subtitulos-Si: Español Latino</p>
 						<p>Calidad: HD-720p</p>
-						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-1-jap">Descargar</button>
+						<P>Enlace: Google Drive</P>
+						<button class="boton-descargar-1-jap">Descargar Drive</button>
 						
 					</div>
 				</div>
