--- a/animes/the first slam dunk/the first slam dunk.html
+++ b/animes/the first slam dunk/the first slam dunk.html
@@ -668,7 +668,7 @@
 						<p>2022</p>
 						<p>Idioma: Español Latino y Japones (Dual-Audio)</p>
 						<p>Subtitulos-NO</p>
-						<p>Calidad: Full HD-1080p</p>
+						<p>Calidad: Full HD-1080p CAMRIP</p>
 						<P>Enlace: Mediafire</P>
 						<button class="boton-descargar-1">Descargar</button>
 					</div>
