--- a/animes/classroom of the elite/classroom of the elite 3.html
+++ b/animes/classroom of the elite/classroom of the elite 3.html
@@ -791,14 +791,14 @@
 						<p>Subtitulos-Si</p>
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire</P>
-						<button class="boton-descargar-6">Proximamente</button>
+						<button class="boton-descargar-6">Descargar</button>
 						<button class="boton-descargar-6-1">Descargar Japones</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
-						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>descargaranimes.net</b></p>
+						<p>Nota: La contraseña para el archivo rar es: Latino: <b>www.locuranime.com</b> | Japones: <b>descargaranimes.net</b></p>
 				</div>
 			</div>
 			<div class="container-superior-temporadas">
@@ -863,7 +863,9 @@
 						<p>Subtitulos-Si</p>
 						<p>Calidad: HD-720p</p>
 						<P>Enlace: Mediafire</P>
+						
 						<button class="boton-descargar-9">Proximamente</button>
+						<button class="boton-descargar-9-1">Descargar Japones</button>
 					</div>
 				</div>
 				<div class="pie-de-temporada">
