--- a/error en busqueda/error.html
+++ b/error en busqueda/error.html
@@ -585,7 +585,7 @@
 				<button id="populares-2010-responsive">Mas populares 2010'</button>
 				<button id="populares-2000-responsive">Mas Populares 2000'</button>
 				<button id="populares-1990-responsive">Mas Populares 1990'</button>
-				<button id="listado-de-animes-responsive">Listado completo de Animes</button>
+				<button id="listado-de-animes-responsive"  hidden="">Listado completo de Animes</button>
 			</div>
 			
 	</div>
@@ -617,10 +617,10 @@
 		</div>
 
 		<div class="iconos-de-footer">
-			<a href="../animes/Death Note/death note.html" id="enlace-whatsapp" target="_blank"></a>
-			<a href="../animes/Death Note/death note.html" id="enlace-instagram" target="_blank"></a>
-			<a href="../animes/Death Note/death note.html" id="enlace-facebook" target="_blank"></a>
-			<a href="../animes/Death Note/death note.html" id="enlace-telegram" target="_blank"></a>
+			<a href="https://whatsapp.com/channel/0029VaHp07P5K3zQOSUR3i0p" id="enlace-whatsapp" target="_blank"></a>
+			<a href="https://www.instagram.com/diosleviackerman24" id="enlace-instagram" target="_blank"></a>
+			<a href="https://www.facebook.com/profile.php?id=61554632386912" id="enlace-facebook" target="_blank"></a>
+			<a href="https://t.me/FullAnime24" id="enlace-telegram" target="_blank"></a>
 			<img src="../iconos png/icons8-facebook-50.png" id="icono-facebook-footer">
 			<img src="../iconos png/icons8-whatsapp-50.png" id="icono-whatsapp-footer">
 			<img src="../iconos png/icons8-telegrama-50.png" id="icono-telegram-footer">
