--- a/animes/naruto shippuben/naruto shippuben.html
+++ b/animes/naruto shippuben/naruto shippuben.html
@@ -1085,7 +1085,7 @@
 			<img src="../../iconos png/icons8-instagram-50.png" id="icono-instagram-footer">
 		</div>
 	</footer>
-<script src="Naruto Shippuben.js"></script>
+<script src="naruto shippuben.js"></script>
 </body>
 	
 
