--- a/animes/sousou no fierren/sousou no fierren.html
+++ b/animes/sousou no fierren/sousou no fierren.html
@@ -734,7 +734,30 @@
 					</div>
 					<a href="" class="link-1" target="_blank"></a>
 					<div class="info-temporada">
-						<h3>Episodios 1 al 24</h3>
+						<h3>Episodio 22</h3>
+						<p>Duracion: 23m</p>
+						<p>2023</p>
+						<p>Idioma: Español Latino</p>
+						<p>Subtitulos-No</p>
+						<p>Calidad: HD-720p</p>
+						<P>Enlace: Mediafire</P>
+						<button class="boton-descargar-22">Descargar</button>
+					</div>
+				</div>
+				<div class="pie-de-temporada">
+						<p>Arco</p>
+						<p>Relleno: 0%</p>
+						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>www.locuranime.com</b></p>
+				</div>
+			</div>
+			<div class="container-superior-temporadas">
+				<div class="container-info-temporadas">
+					<div class="poster-temporada">
+						<img src="../../poster/sousou no fierren img 2.jpg">
+					</div>
+					<a href="" class="link-1" target="_blank"></a>
+					<div class="info-temporada">
+						<h3>Episodios 1 al 25</h3>
 						<p>Duracion: 23m</p>
 						<p>2023</p>
 						<p>Idioma: Japones</p>
@@ -749,6 +772,37 @@
 						<p>Arco</p>
 						<p>Relleno: 0%</p>
 						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>dw-anime</b></p>
+				</div>
+			</div>
+
+			<div class="parrafo-manga">
+				<p>
+					Es ese Anime de peleas que empiezas ha ver por inercia y por comodidad, puesto que ya sabes como van a ser sus personajes, trama, forma de desarrollar la historia, etc. Y cuando acabas comprendes por que sobresale por encima de las otras obras de su genero.
+				</p>
+		</div>
+
+		<div class="container-superior-temporadas">
+				<div class="container-info-temporadas">
+					<div class="poster-temporada">
+						<img src="../../manga/poster/sousou no fierren manga 1.jpg">
+					</div>
+					<a href="" class="link-1-2"></a>
+					<div class="info-temporada">
+						<h3>Manga</h3>
+						<p>Tomos 12 | Capitulos: 125</p>
+						<p>2020</p>
+						<p>Idioma: Español</p>
+						<p>Fansub: Mermelada Scan</p>
+						<p>Formato: PDF</p>
+						<P>Enlace: Mediafire, Google Drive</P>
+						<button class="boton-descargar-manga">Descargar</button>
+					
+					</div>
+				</div>
+				<div class="pie-de-temporada">
+						<p>Arcos:</p>
+						<p>Relleno: 0%</p>
+						<p>Nota: Para seguir con la historia Leer desde el Capitulo</p>
 				</div>
 			</div>
 			<!-- <div class="container-superior-temporadas">
