--- a/index.html
+++ b/index.html
@@ -671,8 +671,8 @@
 			<div class="avisos">
 				<div class="aviso-rojo">
 					<p>
-					<B>AVISO IMPORTANTE</B>: Este sitio web esta en estado de prueba por el momento, no sabemos si continuara en el transcurso de algunos dias. Asi que agradecemos todo el apoyo que nos puedan dar para seguir brindandoles este servicio SIN FINES DE LUCRO. <B>A tu izquierda estan todas nuestras redes, si nos sigues ayudarias mucho.</B><br>
-					Mas Animes se agregaran cada semana, Solo Leveling, Classroom of the Elite, Mashle, Sousou no Fierren, One Piece... todos los sabados 6:00pm un nuevo Episodio.
+					<B>AVISO IMPORTANTE</B>: Este sitio web esta en estado de prueba por el momento, POR LO TANTO ESTA <b>LIBRE DE COOKIES</b>, no sabemos si continuara en el transcurso de algunos dias. Asi que agradecemos todo el apoyo que nos puedan dar para seguir brindandoles este servicio SIN FINES DE LUCRO. <B>A tu izquierda estan todas nuestras redes, si nos sigues ayudarias mucho.</B><br>
+					Mas Animes se agregaran cada semana, <b>Solo Leveling, Classroom of the Elite, Mashle, Sousou no Fierren, One Piece y mas...</b> todos los sabados o miercoles 6:00pm un nuevo Episodio.
 					</p>
 				</div>
 				<div class="aviso-azul">
