--- a/animes/mashle/mashle 2 lat.html
+++ b/animes/mashle/mashle 2 lat.html
@@ -944,6 +944,37 @@
 						<p>Nota: La contraseña para descomprimir el archivo rar es: <b>descargaranimes.net</b></p>
 				</div>
 			</div>
+
+			<div class="parrafo-manga">
+				<p>
+					Es ese Anime de peleas que empiezas ha ver por inercia y por comodidad, puesto que ya sabes como van a ser sus personajes, trama, forma de desarrollar la historia, etc. Y cuando acabas comprendes por que sobresale por encima de las otras obras de su genero.
+				</p>
+		</div>
+
+		<div class="container-superior-temporadas">
+				<div class="container-info-temporadas">
+					<div class="poster-temporada">
+						<img src="../../manga/poster/mashle manga 1.jpg">
+					</div>
+					<a href="" class="link-1-2"></a>
+					<div class="info-temporada">
+						<h3>Manga</h3>
+						<p>Tomos 18 | Capitulos: 162</p>
+						<p>2020</p>
+						<p>Idioma: Español</p>
+						<p>Fansub: DNT</p>
+						<p>Formato: PDF</p>
+						<P>Enlace: Mediafire, Google Drive</P>
+						<button class="boton-descargar-manga">Descargar</button>
+					
+					</div>
+				</div>
+				<div class="pie-de-temporada">
+						<p>Arcos:</p>
+						<p>Relleno: 0%</p>
+						<p>Nota: Para seguir con la historia Leer desde el Capitulo</p>
+				</div>
+			</div>
 			
 			
 		</main>
